# web_store

./: .gitignore  Jenkinsfile  README.md  index.html  script.js  test.py
auth/: Dockerfile.auth  config.py  main.py  pyproject.toml  requirements.txt
backend/: Dockerfile.backend  config.py  core.py  database.py  main.py  models.py  pyproject.toml  requirements.txt  routers.py  utils.py  ws_router.py
backend/models/: DB_model.py  S3_model.py  WebSocket_model.py
backend/static/: login-styles.css  new_item.css  register-styles.css  script.js  styles.css
backend/templates/: base.html  index.html  login.html  new_item.html  register.html  stopped.html
crypto/: Dockerfile.crypto  config.py  main.py  pyproject.toml  requirements.txt  routers.py  schemas.py  utils.py
frontend/: index.html  script.js
helm/web_store_chart/: Chart.yaml  values.yaml
infra-deploy/: cloud-init.tftpl  load_balancer.tf  main.tf  outputs.tf  playbook.yml  provider.tf  variables.tf
k8s/PV/: backend-db-PV.yaml  rabbitmq-PV.yaml
k8s/PVC/: alerter-db-PVC.yaml  auth-db-PVC.yaml  backend-db-PVC.yaml
k8s/configMaps/: alerter_configMap.yaml  auth_configMap.yaml  auth_configMap.yml  backend_configMap.yaml  backend_configMap.yml  crypto_configMap.yaml  crypto_configMap.yml  rabbitmq_configMap.yaml
k8s/deployments/: alerter-db-deployment.yaml  alerter-deployment.yaml  auth-db-deployment.yaml  auth-db-deployment.yml  auth-deployment.yaml  auth-deployment.yml  backend-db-deployment.yaml  backend-db-deployment.yml  backend-deployment.yaml  backend-deployment.yml  crypto-deployment.yaml  crypto-deployment.yml  rabbitmq-deployment.yaml  redis-deployment.yaml
k8s/ingress/: backend-ingress.yaml
k8s/persistent_volumes/: auth-db-PV.yml
k8s/secrets/: alerter_db_secrets.yaml  alerter_secrets.yaml  auth_db_secrets.yaml  auth_secrets.yaml  backend_db_secrets.yaml  rabbitmq_secrets.yaml  s3_secrets.yaml  s3_secrets.yml
k8s/services/: alerter-db-svc.yaml  auth-db-svc.yaml  auth-svc.yaml  backend-db-svc.yaml  backend-svc.yaml  crypto-svc.yaml  (+4 more)
telegram_alerter/: Dockerfile.alerter  config.py  database.py  main.py  pyproject.toml  utils.py
telegram_alerter/models/: user.py
vagrant/: Vagrantfile  playbook.yml
(+50 files in other folders)
