[tool.poetry]
name = "auth"
version = "0.1.0"
description = ""
authors = ["DmitriyKruchkov <kruchkovdmitriy48@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
SQLAlchemy = "^2.0.31"
pydantic = "^2.7.4"
redis = "^5.0.7"
passlib = "^1.7.4"
psycopg2-binary = "^2.9.9"
pyjwt = "^2.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
