[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["DmitriyKruchkov <kruchkovdmitriy48@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
logging = "^0.4.9.6"
redis = "^5.0.7"
fastapi = "^0.111.0"
SQLAlchemy = "^2.0.31"
aiobotocore = "^2.13.1"
pytz = "^2024.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
