[tool.poetry]
name = "crypto"
version = "0.1.0"
description = ""
authors = ["DmitriyKruchkov <kruchkovdmitriy48@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
pydantic = "^2.7.4"
web3 = "^6.20.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
