[tool.poetry]
name = "telegram-alerter"
version = "0.1.0"
description = ""
authors = ["DmitriyKruchkov <kruchkovdmitriy48@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = "^2.0.31"
aiogram = "^3.10.0"
aio-pika = "^9.4.2"
asyncpg = "^0.29.0"
psycopg2-binary = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
